# Buildathon

./: README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 33e84a44d4ef_change_vector_dim_to_512.py
app/: main.py
app/core/: config.py  database.py
app/models/: models.py
app/routers/: recognition.py  users.py
app/schemas/: schemas.py
app/services/: greeting.py
bot/: camera_bot.py
