[project]
name = "buildathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.1",
    "deepface>=0.0.100",
    "fastapi>=0.111.0",
    "httpx>=0.28.1",
    "opencv-python>=4.13.0.92",
    "pgvector>=0.3.2",
    "psycopg2>=2.9.12",
    "psycopg[binary]>=3.1.19",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.28",
    "sqlalchemy>=2.0.30",
    "tf-keras>=2.21.0",
    "uvicorn[standard]>=0.29.0",
]
